2000-09-18  Richard Henderson  <rth@cygnus.com>

	* combine.c (combine_simplify_rtx): Use gen_unary to distribute
	the NOT for De Morgan's rule.
	* simplify-rtx.c (simplify_unary_operation): Simplify a BImode NOT
	of a comparison to the reverse comparison.

	* combine.c (try_combine): Allow split to create a single insn.

	* machmode.def: Add BImode.  Add a column for bitsize.
	* machmode.h (DEF_MACHMODE): Adjust for extra column.
	(GET_MODE_BITSIZE): Use it.
	* rtl.c (DEF_MACHMODE): Adjust for extra column.
	(mode_bitsize): New.
	(mode_mask_array): Use bitsize.
	* combine.c (combine_simplify_rtx): Require inner and outer
	modes to match on nonzero_bits optimizations.

2000-09-18  Bernd Schmidt  <bernds@redhat.co.uk>

	* reload1.c (forget_old_reloads_1): If a hard reg is stored, clear
	its entry in spill_reg_store.
	* config/sh/lib1funcs.ams (movstr_i4 functions): Always compile in.
	* sh.c (reg_no_subreg_operand): New function.
	* sh-protos.h (reg_no_subreg_operand): Declare it.
	* sh.h (PREDICATE_CODES): Add it.
	* sh.md (floatsisf2_i4, floatsidf2_i, extendsfdf2_i4): Use it for
	input operand that needs to be in fpul.
	(fix_truncsfsi2, fix_truncsfsi2_i4): Use register_operand for output.
	* sh.c (find_barrier): Take into account that machine_dependent_reorg
	might add new insns.

2000-09-18  Alexandre Oliva  <aoliva@redhat.com>

	* config/sh/sh.c (sh_expand_prologue): Mark GOTaddr2picreg as
	MAYBE_DEAD.
	(sh_expand_epilogue): Take the PIC register into account when
	computing the frame size.

	* config/sh/sh.c (nonpic_symbol_mentioned_p): Check LABEL_REFs.
	* config/sh/sh.md (sym_label2reg, symPLT_label2reg): Protect
	LABEL_REFs with a PIC-safe unspec.

2000-09-18  Will Cohen  <wcohen@redhat.com>

	* extend.texi (Zero Length): State that static initializers for
	zero-length arrays are not allowed.

	* c-typeck.c (process_init_element): Flag initializers for zero
	length arrays.

	* tree.c (integer_all_onesp): Ignore TREE_INT_CST_HIGH if prec is